[workspace]
resolver = "2"
members = [
  "core",
  "filecheck",
  "lit",
  "litcheck",
]

[workspace.package]
version = "0.4.2"
rust-version = "1.90"
authors = ["Paul Schoenfelder"]
repository = "https://github.com/bitwalker/litcheck"
homepage = "https://github.com/bitwalker/litcheck"
categories = ["development-tools::testing"]
keywords = ["lit", "filecheck", "llvm"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive", "env", "cargo", "wrap_help"] }
compact_str = "0.9"
console = "0.16"
either = "1.9"
env_logger = "0.11"
log = "0.4"
hashbrown = "0.15"
intrusive-collections = "0.10"
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
parking_lot = "0.12"
pretty_assertions = "1.0"
memchr = "2.7"
miette = { version = "7.6", default-features = false, features = ["derive"] }
rayon = "1.8"
regex = "1.10"
regex-syntax = "0.8"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
shlex = "1.2"
smallvec = { version = "1.9", features = ["union", "const_generics", "const_new"] }
target-lexicon = "0.13"
thiserror = "2.0"
toml = { version = "0.9", features = ["preserve_order"] }

litcheck = { version = "0.4.2", package = "litcheck-core", path = "./core" }
filecheck = { version = "0.4.2", package = "litcheck-filecheck", path = "./filecheck" }
lit = { version = "0.4.2", package = "litcheck-lit", path = "./lit" }

[profile.release]
opt-level = 2
debug = true
codegen-units = 1
lto = true
