[package]
name = "litcheck-core"
description = "An internal library used by various litcheck components"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
fancy-diagnostics = ["miette/fancy"]

[dependencies]
clap.workspace = true
compact_str.workspace = true
either.workspace = true
glob = "0.3"
log.workspace = true
miette.workspace = true
memchr.workspace = true
paste = "1.0"
parking_lot.workspace = true
serde.workspace = true
serde_spanned = "1.0"
smallvec.workspace = true
thiserror.workspace = true
walkdir = "2.4"

[dev-dependencies]
pretty_assertions.workspace = true

[build-dependencies]
Inflector = "0.11"
hashbrown.workspace = true
rustc-hash.workspace = true
toml.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "Inflector",
    "hashbrown",
]
