[package]
name = "litcheck-filecheck"
description = "The implementation of litcheck's FileCheck functionality as a library"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
edition = "2024"
license.workspace = true

[features]
default = ["fancy-diagnostics"]
fancy-diagnostics = ["litcheck/fancy-diagnostics"]

[dependencies]
aho-corasick = "1.1"
bitflags = "2.4"
bstr = { version = "1.9", default-features = false }
clap.workspace = true
either.workspace = true
lalrpop-util = "0.22"
litcheck.workspace = true
log.workspace = true
logos = "0.16"
im-rc = "15.1"
itertools.workspace = true
memchr.workspace = true
regex.workspace = true
regex-automata = "0.4"
regex-syntax.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[build-dependencies]
lalrpop = { version = "0.22", default-features = false }

[package.metadata.cargo-machete]
ignored = ["lalrpop"]
