[package]
name = "litcheck"
description = "A standalone implementation of the lit and FileCheck utilities in a single package"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
env_logger.workspace = true
indicatif = { version = "0.18", features = ["rayon"] }
filecheck = { workspace = true, features = ["fancy-diagnostics"] }
lit = { workspace = true, features = ["fancy-diagnostics"] }
litcheck = { workspace = true, features = ["fancy-diagnostics"] }
miette = { workspace = true, features = ["fancy"] }
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
shlex.workspace = true
target-lexicon.workspace = true
thiserror.workspace = true
